--- a/SmogApp/Base.lproj/Main.storyboard
+++ b/SmogApp/Base.lproj/Main.storyboard
@@ -79,6 +79,9 @@
                                                 <constraint firstItem="dhW-cT-tA7" firstAttribute="trailing" secondItem="90F-LN-nHx" secondAttribute="trailingMargin" id="mtO-vq-bQz"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="MD2-4Q-Xm8" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="vtg-sK-yZz"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="brh-LS-v0y">
                                         <rect key="frame" x="0.0" y="88" width="600" height="44"/>
@@ -101,6 +104,9 @@
                                                 <constraint firstItem="Yyj-Av-pj2" firstAttribute="leading" secondItem="XNt-pT-iIY" secondAttribute="leadingMargin" id="wbc-fS-hsh"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="GEo-Pj-Esb" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="f4a-nx-kAL"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="RPV-dW-bUU">
                                         <rect key="frame" x="0.0" y="132" width="600" height="44"/>
@@ -123,6 +129,9 @@
                                                 <constraint firstItem="PmL-AY-RPx" firstAttribute="top" secondItem="9Za-gp-Cmz" secondAttribute="top" id="sSs-lH-yV1"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="WGG-yQ-3VH" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="Pg0-QR-SDp"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Ycp-sc-Afz">
                                         <rect key="frame" x="0.0" y="176" width="600" height="44"/>
@@ -145,6 +154,9 @@
                                                 <constraint firstItem="Y4v-sg-ZW4" firstAttribute="top" secondItem="WQu-21-Fa7" secondAttribute="topMargin" id="pVN-iK-aIQ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="pIP-1W-UK8" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="mB0-hA-ODO"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -158,7 +170,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6fi-XN-Yup" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-432" y="1062"/>
+            <point key="canvasLocation" x="395" y="519"/>
         </scene>
         <!--Map-->
         <scene sceneID="siz-WY-dj6">
@@ -240,6 +252,9 @@
                         <barButtonItem key="leftBarButtonItem" image="menu" id="Utj-ve-MXl"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="menuButton" destination="Utj-ve-MXl" id="2Kx-ln-chr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b2u-6j-Yxq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -262,6 +277,9 @@
                         <barButtonItem key="leftBarButtonItem" image="menu" id="sfa-hN-d4c"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="menuButton" destination="sfa-hN-d4c" id="RiA-sw-o08"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZdT-uq-WqL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -284,6 +302,9 @@
                         <barButtonItem key="leftBarButtonItem" image="menu" id="hFD-bj-OoO"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="menuButton" destination="hFD-bj-OoO" id="B27-u3-Lb6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bXU-uo-HqQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -365,4 +386,7 @@
     <resources>
         <image name="menu" width="22" height="22"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="vtg-sK-yZz"/>
+    </inferredMetricsTieBreakers>
 </document>
